Switched to pure.css.

--- a/quaker-connect.css
+++ b/quaker-connect.css
@@ -1,7 +1,16 @@
-/* CSS declarations go here */
+/*
+ CSS declarations go here
 #login-email {
     max-width: 80%;
 }
 #login-password {
     max-width: 70%;
 }
+
+*/
+
+
+/*
+html {
+    font-size: 100%;
+}*/
