--- a/client/templates/navbar.html
+++ b/client/templates/navbar.html
@@ -1,8 +1,25 @@
 <template name="navbar">
-    <div class="pure-menu pure-menu-open pure-menu-horizontal">
-        <a href="/" class="pure-menu-heading">Quaker Connect</a>
-        <ul>
-            <li> {{> loginButtons align="right"}}</li>
-        </ul>
-    </div>
+<!-- Static navbar -->
+      <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Quaker Connect</a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="/">Home</a></li>
+              <li><a href="/queries">Queries</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li class="active"><li> {{> loginButtons align="right"}}</li></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+      </nav>
 </template>
