Adding author IDs to Queries and Responses schemas.

--- a/client/templates/queries.html
+++ b/client/templates/queries.html
@@ -6,8 +6,5 @@
 </template>
 
 <template name="addQuery">
-    {{> autoformModals}}
-    {{#afModal class="btn btn-primary" collection="Queries" operation="insert"}}
-    Add a new Query
-    {{/afModal}}
+    {{> quickForm collection="Queries" id="insertQueryForm" type="insert" omitFields="author"}}
 </template>
