--- a/client/templates/queries.html
+++ b/client/templates/queries.html
@@ -1,6 +1,6 @@
 <template name="queries">
     {{# if userLoggedIn }}
-        {{> addQuery }}
+        {{> submitQuery }}
     {{/ if }}
     <ul>
         {{# each queries }}
@@ -9,6 +9,23 @@
     </ul>
 </template>
 
-<template name="addQuery">
-    {{> quickForm collection="Queries" id="insertQueryForm" type="insert" omitFields="author"}}
+<template name="submitQuery">
+<form>
+        <fieldset>
+            <!-- Textarea -->
+            <div class="form-group">
+                <label class="col-md-12 control-label" for="yourQuery">Enter a query</label>
+                <div class="col-md-12">
+                    <textarea class="form-control" id="yourQuery" name="yourQuery"></textarea>
+                </div>
+            </div>
+
+            <!-- Button -->
+            <div class="form-group" id="submitQueryButton">
+                <div class="col-md-4">
+                    <button id="submitQueryButton" name="submitQueryButton" class="btn btn-success">Submit Query</button>
+                </div>
+            </div>
+        </fieldset>
+    </form>
 </template>
