--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -26,7 +26,8 @@ p {
     border-radius: 0.5em;
     box-sizing: border-box;
     padding: 0.5em;
-    margin: 0.3em;
+    margin-bottom: 0.7em;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
 }
 
 .query h3 {
@@ -35,6 +36,10 @@ p {
 
 .query .discuss {
     display: inline-block;
+}
+
+#spinner {
+    height: 300px;
 }
 
 @media (min-width: 48em) {
