Added post styles from DiscoverMeteor.

--- a/client/templates/queries/query_item.html
+++ b/client/templates/queries/query_item.html
@@ -1,8 +1,8 @@
 <template name="queryItem">
     <div class="query">
-        <div class="queryContent">
+        <div class="query-content">
             <h3>{{ query }}</h3>
         </div>
-        <a href="{{ pathFor 'queryPage' }}" class="discuss btn btn-default">Discuss</a>
+        <a href="{{ pathFor 'queryPage' }}" class="respond btn btn-success">Respond</a>
     </div>
 </template>
