--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -29,13 +29,23 @@ p {
     margin-bottom: 0.7em;
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
 }
+.query:before, .query:after {
+    content: "";
+    display: table;
+}
+.query:after {
+    clear: both;
+}
 
+.query .query-content {
+    float: left;
+}
 .query h3 {
     margin: 0;
 }
-
-.query .discuss {
-    display: inline-block;
+.query .respond {
+    display: block;
+    float: right;
 }
 
 #spinner {
