--- a/client/templates/queries/query_page.html
+++ b/client/templates/queries/query_page.html
@@ -1,7 +1,11 @@
 <template name="queryPage">
-    <h2>{{ query }}</h2>
-    {{# if userLoggedIn }}
+    <div class="query">
+        <h2>{{ query }}</h2>
+    </div>
+    <div class="well">
+        {{# if userLoggedIn }}
         {{> addResponse }}
-    {{/ if }}
+        {{/ if }}
+    </div>
     {{> showResponses }}
 </template>
