--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -14,13 +14,12 @@ p {
 }
 
 .additional-link {
-    padding:1em !important;
+    padding: 1em !important;
 }
 .pure-menu-heading {
     font-size: 200%;
     text-transform: none !important;
 }
-
 .query, .response {
     background-color: #fff;
     border-radius: 0.5em;
@@ -51,7 +50,7 @@ p {
 #spinner {
     height: 300px;
 }
-#submitResponseButton {
+#submitResponseButton, #submitQueryButton {
     margin: 0.3em 0 0 0;
 }
 
@@ -67,7 +66,7 @@ p {
         font-size: 200%;
         text-transform: none !important;
     }
-    #submitResponseButton {
+    #submitResponseButton, #submitQueryButton {
         float: right;
     }
 }
