Fixing button name/class.

--- a/client/templates/queries/submit_query.html
+++ b/client/templates/queries/submit_query.html
@@ -12,7 +12,7 @@
             <!-- Button -->
             <div class="form-group" id="submitQueryButton">
                 <div class="col-md-4">
-                    <button id="submitQueryButton" name="submitQueryButton" class="btn btn-success">Submit Query</button>
+                    <button id="submitQuery" name="submitQuery" class="btn btn-success">Submit Query</button>
                 </div>
             </div>
         </fieldset>
