Moved button class.

--- a/client/templates/responses/add.jade
+++ b/client/templates/responses/add.jade
@@ -8,9 +8,9 @@ template(name="addResponse")
                     textarea.form-control#yourResponse(name="yourResponse")
 
             // Button
-            .form-group#submitResponseButton
+            .form-group
                 .col-md-4
-                    button#submitResponse.btn.btn-success(name="submitResponse") Submit Response
+                    button.btn.btn-success#submitResponseButton(name="submitResponse") Submit Response
 
 
 
